--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" media="screen" title="main" href="./bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" media="screen" title="main" href="./bootstrap/css/bootstrap-theme.min.css" />
 		<link rel="stylesheet" type="text/css" media="screen" title="main" href="./css/main.css" />
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 		<script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
  	</head>
  	
