--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "https://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
 	<head>
 		<title>
 			CLISTE Web Development
@@ -57,7 +57,7 @@
 								<dt>What can Cliste do for me?</dt>
 									<dd><p>We specialize in web development, specifically the architecture of your new website. We'll do our absolute best to make your website do exactly what you want it to do in terms of functionality.</p></dd>
 								<dt>So you won't make me a logo?</dt>
-									<dd><p>While we can design layouts, it's not our forte. We're more math-brained than art-brained. We'll do our best to design any components you need, but if you want a really, really nice logo drawn up, I suggest you give my friend Lindsey a call.  She's the graphic design badass at <a href="http://www.creens.com">Creens.com</a></p></dd>	
+									<dd><p>While we can design layouts, it's not our forte. We're more math-brained than art-brained. We'll do our best to design any components you need, but if you want a really, really nice logo drawn up, I suggest you give my friend Lindsey a call.  She's the graphic design badass at <a href="https://www.creens.com">Creens.com</a></p></dd>	
  							</dl>			
 						</div><!-- end about -->
 						<div class="tab-pane" id="portfolio">
@@ -70,7 +70,7 @@
 										<div class="caption">
 											<h3>Thinkful Final Project</h3>
 											<p>Portfolio encompasing Thinkful excersizes</p>
-											<p><button type="button" class="btn btn-primary"><a href="http://www.acm006.com/Thinkful/portfolio" type="text">Visit Site</a></button></p>									
+											<p><button type="button" class="btn btn-primary"><a href="https://www.acm006.com/Thinkful/portfolio" type="text">Visit Site</a></button></p>									
 										</div>							
 									</div>
 								</div> <!-- end thumbnail div -->		
@@ -126,7 +126,7 @@
  							<ul id="contactInfo">
 								<li><a href="mailto:andrew@cliste.co"><i class="glyphicon glyphicon-envelope"></i>andrew@cliste.co</a></li>
 								<li><a href="tel:15125024956"><i class="glyphicon glyphicon-earphone"></i>512.502.4956</a></li>
-								<li><a href="https://www.linkedin.com/pub/andrew-mcguire/43/1a6/838"><div id="li" class="mediaIcon"></div></a><a href="http://www.facebook.com/ClisteWeb"><div id="fb" class="mediaIcon"></div></a><a href="http://www.twitter.com/ClisteWeb"></a><div id="twitter" class="mediaIcon"></div></li>		
+								<li><a href="https://www.linkedin.com/pub/andrew-mcguire/43/1a6/838"><div id="li" class="mediaIcon"></div></a><a href="http://www.facebook.com/ClisteWeb"><div id="fb" class="mediaIcon"></div></a><a href="https://www.twitter.com/ClisteWeb"></a><div id="twitter" class="mediaIcon"></div></li>		
  							</ul>				
 						</div><!-- end contact-->
 					</div> <!-- end tabs group -->
