--- a/HSIpsum/index.html
+++ b/HSIpsum/index.html
@@ -4,9 +4,9 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link type="text/css" rel="stylesheet" href="./css/main.css">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script type="text/javascript" src="./js/app.js"></script>
-		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 		<title>Hold Steady Ipsum</title>
 	</head>
 
