--- a/PodCloud/index.html
+++ b/PodCloud/index.html
@@ -8,7 +8,7 @@
 		<!-- <link rel="stylesheet" type="text/css" media="screen" title="main" href="./css/main.css" /> -->
 		<link rel="stylesheet" type="text/css" media="screen" title="main" href="../bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" media="screen" title="main" href="../bootstrap/css/bootstrap-theme.min.css" />
-		<script type="text/javascript" src="httpsS://code.jquery.com/jquery-latest.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 		<script type="text/javascript" src="./js/app.js"></script>
 		<script type="text/javascript" src="./js/rss.js"></script>
 		<script type="text/javascript" src="../bootstrap/js/bootstrap.min.js"></script>
