--- a/Mario/index.html
+++ b/Mario/index.html
@@ -6,7 +6,7 @@
 		</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" media="screen" title="main" href="./main.css" />
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 		<script type="text/javascript" src="./mario.js"></script>
  	</head>
 
