GIS Portfolio Conversion
Switching from Cliste to McGuire GIS

--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "https://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="https://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>
-			CLISTE Web Development
+			Andrew McGuire
 		</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" media="screen" title="main" href="./bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" media="screen" title="main" href="./bootstrap/css/bootstrap-theme.min.css" />
 		<link rel="stylesheet" type="text/css" media="screen" title="main" href="./css/main.css" />
-		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
  	</head>
  	
  	<body>
  		<div class="container-fluid"> 	
  			<div class="row">
-				<div class="col-lg-12" id="banner"><h1>CLISTE</h1><br /><h2>Web Development</h2><hr></div>
+				<div class="col-lg-12" id="banner"><h1>Andrew McGuire</h1><br /><h2>GIS & Web Development</h2><hr></div>
 			</div>
 			<div class="row"> <!-- begin main page-->
 				<div class="col-lg-12 centered-pills"> <!-- begin sidebar nav -->
 					<ul class="nav nav-pills"> 
 						<li class="active"><a href="#home" data-toggle="tab">Home<i class="glyphicon glyphicon-home"></i></a></li>
 						<li><a href="#about" data-toggle="tab">About<i class="glyphicon glyphicon-user"></i></a></li>
-						<li><a href="#portfolio" data-toggle="tab">Portfolio<i class="glyphicon glyphicon-briefcase"></i></a></li>
-						<li><a href="#projects" data-toggle="tab">Projects<i class="glyphicon glyphicon-pencil"></i></a></li>
+						<li><a href="#portfolio" data-toggle="tab">GIS Portfolio<i class="glyphicon glyphicon-globe"></i></a></li>
+						<li><a href="#projects" data-toggle="tab">Programming Projects<i class="glyphicon glyphicon-file"></i></a></li>
 						<li><a href="#contact" data-toggle="tab">Contact<i class="glyphicon glyphicon-envelope"></i></a></li>
 					</ul>				
 				</div>
@@ -32,59 +32,77 @@
 				<div class="col-lg-12"> <!-- begin content -->
 					<div class="tab-content"> <!-- begin tabs -->
 						<div class="tab-pane active" id="home">
-							<div class="jumbotron bg">
- 							<h1>Welcome to Cliste Web Development.</h1>
- 							<p>Please bear with us* as we get ourselves established.  Things are still being fine-tuned.<p><br />
- 							<p>If it was still 1998, this is where I'd put a GIF of a stick man with a shovel and a banner saying "UNDER CONSTRUCTION".</p><br /><br />
- 							<p><em>*That's the Royal "us".  There's only one guy who works here.</em></p>
+							<div class="jumbotron">
+ 							<h1>Welcome to my online portfolio <img class="img-circle" src="./resources/mugshot.jpg"></h1>
+ 							<p>Across the top, you can find the nav bar showing everythign you should ever want or need to know<p><br />
+ 							<p>If it was still 1998, this is where I'd put a GIF of a stick man with a shovel and a banner saying "UNDER CONSTRUCTION".</p>
  							</div>	
 						</div> <!-- end home -->
 						<div class="tab-pane" id="about">
 							<dl id="faqDefinitionList">
-								<dt>Who is the brains of this operation?</dt>						
-									<dd><p>My name is Andrew McGuire. Despite there only being one person at Cliste, I'm going to use the Royal "We" when talking about the company. It just sounds classier.</p></dd>
+								<dt>Tell us about yourself:</dt>						
+									<dd><p>My name is Andrew McGuire. I was born in Indiana, grew up in Iowa, and now live in Minnesota on a small acreage with my wife.  We're expecting our first child sometime mid-March 2017.</p></dd>
 								<dt>What's your background?</dt>						
 									<dd><p>I went to Drake University in Des Moines, Iowa, where I got a Bachelor's in history, with minors in math
 									and geography. After that, I spent a year living in Dublin, Ireland while I got my Master's in Irish history.
-									A few odd jobs here and there - teaching English in Prague, driving a Zamboni in Buffalo - and I found myself in Austin.
-									Tired of the odd jobs, I decided I wanted to strike out on my own, so I took some web development courses and here we are.</p></dd>
-								<dt>How do I pronounce "cliste"?</dt>
-									<dd><p><em>/KLISH-tah/</em></p></dd>		
-								<dt>What does it mean?</dt>
-									<dd><p><em>Cliste</em> is an Irish word meaning "smart" or "clever". When I was looking for a name for my company, I decided
-									I wanted an Irish word, both to celebrate my heritage and education, but also because it was pretty much guaranteed to be unique.
-									When I found <em>cliste</em> in the dictionary, I knew right away it was the right word.</p></dd>
-								<dt>What can Cliste do for me?</dt>
-									<dd><p>We specialize in web development, specifically the architecture of your new website. We'll do our absolute best to make your website do exactly what you want it to do in terms of functionality.</p></dd>
-								<dt>So you won't make me a logo?</dt>
-									<dd><p>While we can design layouts, it's not our forte. We're more math-brained than art-brained. We'll do our best to design any components you need, but if you want a really, really nice logo drawn up, I suggest you give my friend Lindsey a call.  She's the graphic design badass at <a href="https://www.creens.com">Creens.com</a></p></dd>	
+									A few odd jobs here and there followed- teaching English in Prague, driving a Zamboni in Buffalo, taking care of dogs in Austin, and now selling bike racks in Minneapolis.  Tired of the odd jobs, I decided I was going to go back to school for my GIS certificate.</p></dd>
+								<dt>Why GIS?</dt>						
+									<dd><p>I pursued history because it was something I was passionate about, but without real consideration for job prospects.  Determined not ot make that mistake again, I took a long think about what would be marketable and would be enjoyable.  I looked at the bookshelf where my wife and I keep our globe collection and it hit me - I love computer programming and I love maps.  Remembering a GIS class I took in undergrad, I decided it was a path I wanted to pursue.  Why shouldn't I seek a career combining to things I love so much.</p></dd>
+								<dt>What do you like to do in your free time?</dt>						
+									<dd><p>For the last 10 years, I've been a fairly committed rugby player.  I've had the privledge of playing for 4 teams across three countries.  But time catches up to us all.  I've started to transition to high school coaching to stay involved with the sport, but without the trouble getting out of bed Sunday morning. As I mentioned, we live on a small acreage.  There are plenty of projects to keep us busy, and we're preparing to get some animals.  Chickens and a dog are high on the list, plus something like a hog or sheep possibly down the line.</p></dd>
  							</dl>			
 						</div><!-- end about -->
 						<div class="tab-pane" id="portfolio">
-							<h2>My Design Portfolio</h2>
- 							<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
-   								<div class="thumbnail">
-									<a href="#" class="thumbnail">
-										<img src="./resources/portfolio.png" alt="HSI">
-									</a>
+							<h2>GIS Portfolio</h2>
+							<div class="row"><!-- begin project thumbnail grouping -->
+ 								<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
+   									<div class="thumbnail">
+										<a href="#" class="thumbnail">
+											<img src="./resources/JohnMuir.png" alt="HSI">
+										</a>
 										<div class="caption">
-											<h3>Thinkful Final Project</h3>
-											<p>Portfolio encompasing Thinkful excersizes</p>
-											<p><button type="button" class="btn btn-primary"><a href="https://www.acm006.com/Thinkful/portfolio" type="text">Visit Site</a></button></p>									
+											<h3>Hiking on the John Muir Trail</h3>
+											<p>My first GIS assignment</p>
+											<p><button type="button" class="btn btn-primary"><a href="#" type="text" data-toggle="modal" data-target="#JohnMuirModal">Learn More</a></button></p>									
 										</div>							
 									</div>
-								</div> <!-- end thumbnail div -->		
+								</div><!-- end thumbnail div -->
+								<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
+									<div class="thumbnail">
+										<a href="#" class="thumbnail">
+											<img src="./resources/Landslide.png" alt="HSI">
+										</a>
+										<div class="caption">
+											<h3>Predicted Areas of High Landslide Risk</h3>
+											<p>Using table data to make predictions</p>
+											<p><button type="button" class="btn btn-primary"><a href="#" type="text" data-toggle="modal" data-target="#LandslideModal">Learn More</a></button></p>									
+										</div>							
+									</div>
+								</div><!-- end thumbnail div -->
+								<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
+									<div class="thumbnail">
+										<a href="#" class="thumbnail">
+											<img src="./resources/Wrigley.png" alt="HSI">
+										</a>
+										<div class="caption">
+											<h3>Bike Parking At Wrigley Field</h3>
+											<p>Fall Semester Final</p>
+											<p><button type="button" class="btn btn-primary"><a href="#" type="text" data-toggle="modal" data-target="#WrigleyModal">Learn More</a></button></p>									
+										</div>							
+									</div>
+								</div> <!-- end thumbnail div -->	
+							</div><!-- end portfoilo thumbnail grouping -->	
 						</div><!-- end porfolio -->
 						<div class="tab-pane" id="projects">
 							<h2>Projects</h2>
  							<p>These are things I've done just for practicing my skills or because I thought it'd be cool.  A lot of these are in beta, so check back occasionally to see my progress.</p>
  							<p>Please click on any project to learn more about it and visit a live demo.</p>
 							<div class="row"><!-- begin project thumbnail grouping -->
-   							<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
-   								<div class="thumbnail">
-									<a href="#" class="thumbnail">
-										<img src="./resources/HSipsum.png" alt="HSI">
-									</a>
+   								<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
+   									<div class="thumbnail">
+										<a href="#" class="thumbnail">
+											<img src="./resources/HSipsum.png" alt="HSI">
+										</a>
 										<div class="caption">
 											<h3>Hold Steady Ipsum</h3>
 											<p>Generate filler text from Hold Steady lyrics</p>
@@ -93,10 +111,10 @@
 									</div>
 								</div> <!-- end thumbnail div -->
 								<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
-   								<div class="thumbnail">
-									<a href="#" class="thumbnail">
-										<img src="./resources/podcloud.png" alt="PC">
-									</a>
+   									<div class="thumbnail">
+										<a href="#" class="thumbnail">
+											<img src="./resources/podcloud.png" alt="PC">
+										</a>
 										<div class="caption">
 											<h3>PodCloud</h3>
 											<p>Browser-based podcast player & manager</p>
@@ -105,10 +123,10 @@
 									</div>
 								</div> <!-- end thumbnail div -->
 								<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
-   								<div class="thumbnail">
-									<a href="#" class="thumbnail">
-										<img src="./Mario/images/mariostandright.gif" alt="Mario">
-									</a>
+   									<div class="thumbnail">
+										<a href="#" class="thumbnail">
+											<img src="./Mario/images/mariostandright.gif" alt="Mario">
+										</a>
 										<div class="caption">
 											<h3>Mario Sprite</h3>
 											<p>Crude imitation of Mario</p>
@@ -120,23 +138,91 @@
 						</div> <!-- end projects -->
 						<div class="tab-pane" id="contact">
 							<h2>Contact</h2>
-							<p>Pricing can get tricky without knowing what exactly you, the client, are looking for.  Something as simple as a few static HTML & CSS pages can be had for a few hundred dollars, with a discount if you already have the design made and just need someone to develop the code.</p>
- 							<p>If you need a logo designed and then a multitude of dynamic jQUery and AJAX implementations, then your project will be comensurately more</p>
- 							<p>In order to best provide you with accurate pricing, please email/call/DM/whatever us with your project needs and wants, and we can tailor a quote just for you</p>				
+							<p>I look foward to hearing from you.  Please feel free to contact me by any of the methods here</p>			
  							<ul id="contactInfo">
-								<li><a href="mailto:andrew@cliste.co"><i class="glyphicon glyphicon-envelope"></i>andrew@cliste.co</a></li>
+								<li><a href="mailto:andrew@cliste.co"><i class="glyphicon glyphicon-envelope"></i>Andrew.McGuire@students.ItascaCC.edu</a></li>
 								<li><a href="tel:15125024956"><i class="glyphicon glyphicon-earphone"></i>512.502.4956</a></li>
-								<li><a href="https://www.linkedin.com/pub/andrew-mcguire/43/1a6/838"><div id="li" class="mediaIcon"></div></a><a href="http://www.facebook.com/ClisteWeb"><div id="fb" class="mediaIcon"></div></a><a href="https://www.twitter.com/ClisteWeb"></a><div id="twitter" class="mediaIcon"></div></li>		
+								<li><a href="https://www.linkedin.com/pub/andrew-mcguire/43/1a6/838"><div id="li" class="mediaIcon"></div></a></li>		
  							</ul>				
 						</div><!-- end contact-->
 					</div> <!-- end tabs group -->
 				</div> <!-- end content -->
 			</div><!-- end main page -->
 		</div> <!-- end content container -->
+		<div class="modal fade" id="JohnMuirModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"> <!-- begin modal window -->
+  			<div class="modal-dialog">
+   				<div class="modal-content">
+      				<div class="modal-header">
+        				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        					<h4 class="modal-title" id="myModalLabel">Hiking the John Muir Trail</h4>
+     				</div>
+     				<div class="modal-body">
+						Objectives of this assignment were:
+						<ul>
+							<li>Adding layers</li>
+							<li>Selecting by attributes</li>
+							<li>Labeling features</li>
+							<li>Basic design choices (<em>eg</em> line style, color choices, label icons</li>						
+						</ul>
+     				</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-primary"><a href="./resources/JohnMuir.png">View Image</a></button>
+						<button type="button" class="btn btn-primary"><a href="/resources/JohnMuir.PDF">Download PDF</a></button>
+					</div>
+				</div>
+			</div>
+		</div><!-- end John Muir modal window -->
+		<div class="modal fade" id="LandslideModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"> <!-- begin modal window -->
+  			<div class="modal-dialog">
+   				<div class="modal-content">
+      				<div class="modal-header">
+        				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        					<h4 class="modal-title" id="myModalLabel">Predicted Areas of High Landslide Risk</h4>
+     				</div>
+     				<div class="modal-body">
+						Objectives of this assignment were:
+						<ul>
+							<li>Using DRM for hillshading</li>
+							<li>Using data to make predictions</li>
+							<li>Using map insets</li>						
+						</ul>
+     				</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-primary"><a href="./resources/Landslide.png">View Image</a></button>
+						<button type="button" class="btn btn-primary"><a href="./resources/Landslide.PDF">Download PDF</a></button>
+					</div>
+				</div>
+			</div>
+		</div><!-- end Landslide modal window -->
+		<div class="modal fade" id="WrigleyModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"> <!-- begin modal window -->
+  			<div class="modal-dialog">
+   				<div class="modal-content">
+      				<div class="modal-header">
+        				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        					<h4 class="modal-title" id="myModalLabel">Bike Parking At Wrigley</h4>
+     				</div>
+     				<div class="modal-body">
+						Objectives of this assignment were:
+						<ul>
+							<li>Compling data from disperate souces into one geodatabase</li>
+							<li>Drawing to create layers (Wrigley Field itself)</li>
+							<li>Selecting by location</li>					
+						</ul>
+     				</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-primary"><a href="./resources/Wrigley.png">View Image</a></button>
+						<button type="button" class="btn btn-primary"><a href="./resources/Wrigley.PDF">Download PDF</a></button>
+					</div>
+				</div>
+			</div>
+		</div><!-- end Wrigley modal window -->
 		<div class="modal fade" id="HSIpsumModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"> <!-- begin modal window -->
   			<div class="modal-dialog">
-   			<div class="modal-content">
-      			<div class="modal-header">
+   				<div class="modal-content">
+      				<div class="modal-header">
         				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         					<h4 class="modal-title" id="myModalLabel">Hold Steady Ipsum</h4>
      				</div>
@@ -157,8 +243,8 @@
 		</div><!-- end HSIpsum modal window -->
 		<div class="modal fade" id="podcloudModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"><!-- begin modal window -->
   			<div class="modal-dialog">
-   			<div class="modal-content">
-      			<div class="modal-header">
+   				<div class="modal-content">
+      				<div class="modal-header">
         				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         					<h4 class="modal-title" id="myModalLabel">PodCloud</h4>
      				</div>
@@ -187,8 +273,8 @@
 		</div><!-- end podcloud modal window -->
 		<div class="modal fade" id="marioModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"><!-- begin modal window -->
   			<div class="modal-dialog">
-   			<div class="modal-content">
-      			<div class="modal-header">
+   				<div class="modal-content">
+      				<div class="modal-header">
         				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         					<h4 class="modal-title" id="myModalLabel">Mario Sprite</h4>
      				</div>
