--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "https://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
 	<head>
 		<title>
 			Andrew McGuire
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" media="screen" title="main" href="./bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" media="screen" title="main" href="./bootstrap/css/bootstrap-theme.min.css" />
 		<link rel="stylesheet" type="text/css" media="screen" title="main" href="./css/main.css" />
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 		<script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
  	</head>
  	
