Update Index again

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 						<button type="button" class="btn btn-primary"><a href="./resources/JohnMuir.png">View Image</a></button>
-						<button type="button" class="btn btn-primary"><a href="/resources/JohnMuir.PDF">Download PDF</a></button>
+						<button type="button" class="btn btn-primary"><a href="/resources/JohnMuir.pdf">Download PDF</a></button>
 					</div>
 				</div>
 			</div>
@@ -191,7 +191,7 @@
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 						<button type="button" class="btn btn-primary"><a href="./resources/Landslide.png">View Image</a></button>
-						<button type="button" class="btn btn-primary"><a href="./resources/Landslide.PDF">Download PDF</a></button>
+						<button type="button" class="btn btn-primary"><a href="./resources/Landslide.pdf">Download PDF</a></button>
 					</div>
 				</div>
 			</div>
@@ -214,7 +214,7 @@
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 						<button type="button" class="btn btn-primary"><a href="./resources/Wrigley.png">View Image</a></button>
-						<button type="button" class="btn btn-primary"><a href="./resources/Wrigley.PDF">Download PDF</a></button>
+						<button type="button" class="btn btn-primary"><a href="./resources/Wrigley.pdf">Download PDF</a></button>
 					</div>
 				</div>
 			</div>
