Added Hold Steady Quiz
Added Hold Steady Quiz.
Fixed typos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 						<div class="tab-pane active" id="home">
 							<div class="jumbotron">
  							<h1>Welcome to my online portfolio <img class="img-circle" src="./resources/mugshot.jpg"></h1>
- 							<p>Across the top, you can find the nav bar showing everythign you should ever want or need to know<p><br />
+ 							<p>Across the top, you can find the nav bar showing everything you should ever want or need to know<p><br />
+ 							<p>Please check back regularly for updates, as I'm always producing more content in class (as well as teaching myself Python and brushing up on my PHP with what freetime I can find<p><br />
  							<p>If it was still 1998, this is where I'd put a GIF of a stick man with a shovel and a banner saying "UNDER CONSTRUCTION".</p>
  							</div>	
 						</div> <!-- end home -->
@@ -58,7 +59,7 @@
  								<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
    									<div class="thumbnail">
 										<a href="#" class="thumbnail">
-											<img src="./resources/JohnMuir.png" alt="HSI">
+											<img src="./resources/JohnMuir.png" alt="John Muir Trail">
 										</a>
 										<div class="caption">
 											<h3>Hiking on the John Muir Trail</h3>
@@ -70,7 +71,7 @@
 								<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
 									<div class="thumbnail">
 										<a href="#" class="thumbnail">
-											<img src="./resources/Landslide.png" alt="HSI">
+											<img src="./resources/Landslide.png" alt="Landslide">
 										</a>
 										<div class="caption">
 											<h3>Predicted Areas of High Landslide Risk</h3>
@@ -82,7 +83,7 @@
 								<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
 									<div class="thumbnail">
 										<a href="#" class="thumbnail">
-											<img src="./resources/Wrigley.png" alt="HSI">
+											<img src="./resources/Wrigley.png" alt="Wrigley">
 										</a>
 										<div class="caption">
 											<h3>Bike Parking At Wrigley Field</h3>
@@ -95,10 +96,10 @@
 						</div><!-- end porfolio -->
 						<div class="tab-pane" id="projects">
 							<h2>Projects</h2>
- 							<p>These are things I've done just for practicing my skills or because I thought it'd be cool.  A lot of these are in beta, so check back occasionally to see my progress.</p>
+ 							<p>These are things I've done just for practicing my skills or because I thought it'd be cool.  A lot of these are just proof-of-concept to see if I could do it.  Please keep this in mind, as the code is probably a bit clunkier that it might otherwise be if I was wanting to polish this up.</p>
  							<p>Please click on any project to learn more about it and visit a live demo.</p>
 							<div class="row"><!-- begin project thumbnail grouping -->
-   								<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
+   								<div class="col-sm-6 col-md-3"><!-- begin HoldSteady Ipsum thumbnail div -->
    									<div class="thumbnail">
 										<a href="#" class="thumbnail">
 											<img src="./resources/HSipsum.png" alt="HSI">
@@ -109,8 +110,8 @@
 											<p><button type="button" class="btn btn-primary"><a href="#" type="text" data-toggle="modal" data-target="#HSIpsumModal">Learn More</a></button></p>									
 										</div>							
 									</div>
-								</div> <!-- end thumbnail div -->
-								<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
+								</div> <!-- end HS Ipsum thumbnail div -->
+								<div class="col-sm-6 col-md-3"><!-- begin Podcloud thumbnail div -->
    									<div class="thumbnail">
 										<a href="#" class="thumbnail">
 											<img src="./resources/podcloud.png" alt="PC">
@@ -121,8 +122,8 @@
 											<p><button type="button" class="btn btn-primary"><a href="#" type="text" data-toggle="modal" data-target="#podcloudModal">Learn More</a></button></p>								
 										</div>							
 									</div>
-								</div> <!-- end thumbnail div -->
-								<div class="col-sm-6 col-md-3"><!-- begin thumbnail div -->
+								</div> <!-- end Podcloud thumbnail div -->
+								<div class="col-sm-6 col-md-3"><!-- begin Mario thumbnail div -->
    									<div class="thumbnail">
 										<a href="#" class="thumbnail">
 											<img src="./Mario/images/mariostandright.gif" alt="Mario">
@@ -133,7 +134,19 @@
 											<p><button type="button" class="btn btn-primary"><a href="#" type="text" data-toggle="modal" data-target="#marioModal">Learn More</a></button></p>								
 										</div>							
 									</div>
-								</div> <!-- end thumbnail div -->
+								</div> <!-- end Mario thumbnail div -->
+								<div class="col-sm-6 col-md-3"><!-- begin HSQuiz thumbnail div -->
+   									<div class="thumbnail">
+										<a href="#" class="thumbnail">
+											<img src="./HSQuiz/intro_image.jpg" alt="Hold Steady Quiz">
+										</a>
+										<div class="caption">
+											<h3>Hold Steady Quiz</h3>
+											<p>A quick quiz based on Hold Steady lyrics</p>
+											<p><button type="button" class="btn btn-primary"><a href="#" type="text" data-toggle="modal" data-target="#HSQuizModal">Learn More</a></button></p>								
+										</div>							
+									</div>
+								</div> <!-- end HSQuiz thumbnail div -->
 							</div><!-- end project thumbnail grouping -->	
 						</div> <!-- end projects -->
 						<div class="tab-pane" id="contact">
@@ -167,7 +180,7 @@
      				</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-primary"><a href="./resources/JohnMuir.png">View Image</a></button>
+						<button type="button" class="btn btn-primary"><a href="./resources/JohnMuir.png" target="_blank">View Image</a></button>
 						<button type="button" class="btn btn-primary"><a href="/resources/JohnMuir.pdf">Download PDF</a></button>
 					</div>
 				</div>
@@ -190,7 +203,7 @@
      				</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-primary"><a href="./resources/Landslide.png">View Image</a></button>
+						<button type="button" class="btn btn-primary"><a href="./resources/Landslide.png" target="_blank">View Image</a></button>
 						<button type="button" class="btn btn-primary"><a href="./resources/Landslide.pdf">Download PDF</a></button>
 					</div>
 				</div>
@@ -213,7 +226,7 @@
      				</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-primary"><a href="./resources/Wrigley.png">View Image</a></button>
+						<button type="button" class="btn btn-primary"><a href="./resources/Wrigley.png" target="_blank">View Image</a></button>
 						<button type="button" class="btn btn-primary"><a href="./resources/Wrigley.pdf">Download PDF</a></button>
 					</div>
 				</div>
@@ -279,7 +292,7 @@
         					<h4 class="modal-title" id="myModalLabel">Mario Sprite</h4>
      				</div>
      				<div class="modal-body">
-						<p>I made this a few years ago as a little project to try to mimic Mario's movements. Possible future improvements:
+						<p>One of my first forays into coding.  This is here almost for nostalgic reasons, to see how far I've come.  I made this a few years ago as a little project to try to mimic Mario's movements. Possible future improvements:
 						<ul>
 							<li>incorporation of .once() to limit Mario's movement</li>
 							<li>enhanced UI styling (e.g. background and surfaces)</li>
@@ -293,5 +306,29 @@
 				</div>
 			</div>
 		</div><!-- end mario modal window -->
+		<div class="modal fade" id="HSQuizModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"> <!-- begin modal window -->
+  			<div class="modal-dialog">
+   				<div class="modal-content">
+      				<div class="modal-header">
+        				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        					<h4 class="modal-title" id="myModalLabel">Hold Steady Quiz</h4>
+     				</div>
+     				<div class="modal-body">
+						The idea of this project was to practice jQuery techniques such as:
+						<ul>
+							<li>calling functions</li>
+							<li>loading arrays</li>
+							<li>tracking changes based on user input</li>
+							<li>audio integration</li>	
+							<li>using CSS classes to change attributes</li>					
+						</ul>
+     				</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-primary"><a href="/HSQuiz">View Project</a></button>
+					</div>
+				</div>
+			</div>
+		</div><!-- end HSIpsum modal window -->
  	</body>
  </html>
