--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<div class="jumbotron">
  							<h1>Welcome to my online portfolio <img class="img-circle" src="./resources/mugshot.jpg"></h1>
  							<p>Across the top, you can find the nav bar showing everything you should ever want or need to know<p><br />
- 							<p>Please check back regularly for updates, as I'm always producing more content in class (as well as teaching myself Python and brushing up on my PHP with what freetime I can find<p><br />
+ 							<p>Please check back regularly for updates, as I'm always producing more content in class (as well as teaching myself Python and brushing up on my PHP with what freetime I can find.)<p><br />
  							<p>If it was still 1998, this is where I'd put a GIF of a stick man with a shovel and a banner saying "UNDER CONSTRUCTION".</p>
  							</div>	
 						</div> <!-- end home -->
