--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 								<div class="col-sm-6 col-md-3"><!-- begin Python thumbnail div -->
    									<div class="thumbnail">
 										<a href="#" class="thumbnail">
-											<img src="./resources/Python.png" alt="HSI">
+											<img src="./resources/python.png" alt="Geocoder">
 										</a>
 										<div class="caption">
 											<h3>Python Geocoder</h3>
